--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Calculadora Mafe</title>
 </head>
 <body>
@@ -13,26 +15,27 @@
         <div class="calculadora-info">
           <h3 class="titulo">Magic Card</h3>
           <table class="calculadora-info">
-            <tr class="operaciones">
-            <button class="boton-operacion" id="suma">+</button>
-            <button class="boton-operacion" id="resta">-</button>
-            <button class="boton-operacion" id="multiplicacion">x</button>
-            <button class="boton-operacion" id="division">÷</button>
-            <button class="boton-operacion" id="igual">=</button>
-            <button class="boton-operacion" id="clear">CE</button>
-            </tr>
-          
-            <tr class="numeros">
-            <button class="numero">1</button>
-            <button class="numero">2</button>
-            <button class="numero">3</button>
-            <button class="numero">4</button>
-            <button class="numero">5</button>
-            <button class="numero">6</button>
-            <button class="numero">7</button>
-            <button class="numero">8</button>
-            <button class="numero">9</button>
-            </tr>
+            <div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
+              <div class="btn-group mr-2" role="group" aria-label="First group">
+                <button type="button" class="btn btn-secondary">1</button>
+                <button type="button" class="btn btn-secondary">2</button>
+                <button type="button" class="btn btn-secondary">3</button>
+                <button type="button" class="btn btn-secondary">4</button>
+              </div>
+              <div class="btn-toolbar justify-content-between" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group" role="group" aria-label="First group">
+                  <button type="button" class="btn btn-secondary">5</button>
+                  <button type="button" class="btn btn-secondary">6</button>
+                  <button type="button" class="btn btn-secondary">7</button>
+                  <button type="button" class="btn btn-secondary">8</button>
+                </div>
+                <div class="btn-toolbar justify-content-between" role="toolbar" aria-label="Toolbar with button groups">
+                  <div class="btn-group" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary">9</button>
+                    <button type="button" class="btn btn-secondary">0</button>
+                    <button type="button" class="btn btn-secondary">.</button>
+                    <button type="button" class="btn btn-secondary">=</button>
+                  </div>
            
           </table>
         </div>
