cambio en el estilo y los botones
se cambiaron los estilos de los botones

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     
-      <div class="calculadora">
+      <div class="contenedor">
         <div class="calculadora">
             <div class="display">
               <div id="valor-anterior"></div>
@@ -46,7 +46,6 @@
                 <button class="numero">00</button>
                 <button class="numero">.</button>
                 <button class="col-2" onclick="display.borrarTodo()">C</button>
-                <button class="operador">%</button>
               </div>
         </div>
       </div>
